AC_INIT([HelloWorlder], [1.0], [helloworlder@flaviodesousa.com], [https://github.com/flaviodesousa/helloworlder])
AC_CONFIG_SRCDIR([src/helloworlder.c])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])

AC_PROG_CC
AC_CHECK_HEADERS([stdlib.h])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
